# HAR

./: .gitignore  README.md  db_insight.ipynb  fl-tensorflow-sim-new.ipynb  info.md
CL/: script-cl-sklearn.ipynb
CL-sklearn/: script-cl-sklearn.ipynb
CL-tensorflow/: script-cl-tensorflow.ipynb  script-fl-tensorflow.ipynb
CL-tensorflow/logs/train/: events.out.tfevents.1719564874.Computer-portatile-di-Filippo.local.9790.0.v2  events.out.tfevents.1719568545.Computer-portatile-di-Filippo.local.17375.0.v2  events.out.tfevents.1719914143.ComputeiFilippo.station.16188.0.v2  events.out.tfevents.1719914183.ComputeiFilippo.station.16358.0.v2  events.out.tfevents.1720692949.Computer-portatile-di-Filippo.local.2798.0.v2
FL/: client.py  script-fl-sklearn.ipynb  server.py  utils.py
FL-sklearn/: client.py  utils.py
FL-tensorflow/: FL-tf-sim.ipynb  client.py  fl-tensorflow-sim.ipynb  script-fl-tensorflow.ipynb  server.py  sim.ipynb
evaluation/: script.ipynb
fl-tensorflow-v2/: README.md  centralized.ipynb  metrics.txt  metrics_fem_hor.txt  metrics_fem_hor_10t.txt  metrics_fem_hor_val.txt  metrics_fem_hor_val_20.txt  metrics_fem_vert.txt  metrics_fem_vert_10t.txt  metrics_har_hor_10t.txt  metrics_har_vert_10t.txt  pyproject.toml  visualization.ipynb
fl-tensorflow-v2/fl_tensorflow_v2/: __init__.py  client.py  server.py  task.py  task_rnd.py
